[package]
authors = ["Rodrigo Gryzinski <rogryza@rogryza.com>"]
edition = "2018"
name = "docker-volume-glusterfs-rs"
version = "0.1.0"

[dependencies]
chrono = "^0.4"
env_logger = "^0.7"
futures = "^0.3"
hyper = "^0.13"
hyperlocal = "^0.7"
jsonwebtoken = "^7.2"
log = "^0.4"
quick-error = "^2"
rusqlite = "^0.24"
serde = {version = "^1", features = ["derive"]}
serde-xml-rs = "^0.4"
serde_json = "^1"
sha2 = "^0.9"
tokio = {version = "^0.2", features = ["full"]}
